[project]
name = "odoo-addons-oca-server-auth"
version = "18.0.20241023.0"
dependencies = [
    "odoo-addon-auth_api_key==18.0.*",
    "odoo-addon-auth_api_key_group==18.0.*",
    "odoo-addon-auth_api_key_server_env==18.0.*",
    "odoo-addon-auth_oidc==18.0.*",
    "odoo-addon-base_user_empty_password==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
